<resources>
    <string name="app_name">APOD</string>
    <string name="today">Today</string>
    <string name="dummy_text"> From July of 1997, a ramp from the Pathfinder lander, the Sojourner robot rover, airbags, a couch, Barnacle Bill and Yogi Rock appear together in this 3D stereo view of the surface of Mars.\n Barnacle Bill is the rock just left of the solar-paneled Sojourner. Yogi is the big friendly-looking boulder at top right. The \'couch\' is the angular rock shape visible near center on the horizon. Look at the image with red/blue glasses (or just hold a piece of clear red plastic over your left eye and blue or green over your right) to get the dramatic 3D perspective. The stereo view was recorded by the remarkable Imager for Mars Pathfinder (IMP) camera. The IMP had two optical paths for stereo imaging and ranging and was equipped with an array of color filters for spectral analysis. Operating as the first astronomical observatory on Mars, the IMP also recorded images of the Sun and Deimos, the smallest of Mars\' two tiny moons. This July saw the launch of NASA\'s Mars Perseverance Rover on a mission to the Red Planet.</string>
    <string name="offline_message">You\'re offline! Check your internet connection.</string>
    <string name="explanation">Explanation</string>
    <string name="search_hint">Search for … (e.g. "Orion")</string>
    <string name="preferences">Preferences</string>
    <string name="favourites">Favourites</string>
    <string name="dot">dot</string>
    <string name="you_have_no_favourite_apods">You have no favourite apods!!!</string>
    <string name="options">Options</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="copy_image_link">Copy image link</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="close">Close</string>
    <string name="app_theme">App theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_default">System default</string>
    <string name="back_button">back_button</string>
    <string name="main_image">main_image</string>
    <string name="youtube_icon">youtube_icon</string>
    <string name="fullscreen_button">fullscreen_button</string>
    <string name="share_button">share button</string>
    <string name="download_button">download button</string>
    <string name="like_button">like button</string>
    <string name="more_button">more button</string>
    <string name="pick_date">pick date</string>
    <string name="go_to_first">go to first</string>
    <string name="divider_dot">divider dot</string>
    <string name="app_language">App language</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="set_wallpaper_daily">Set wallpaper daily</string>
</resources>