<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/id_home"
        android:enabled="true"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/id_favourites"
        android:enabled="true"
        android:icon="@drawable/ic_round_favorite_24"
        android:title="@string/favourites" />


    <item
        android:id="@+id/id_gallery"
        android:enabled="true"
        android:icon="@drawable/ic_round_gallery_24"
        android:title="@string/gallery" />
    <item
        android:id="@+id/id_preferences"
        android:enabled="true"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/preferences" />

</menu>