<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.javlonrahimov1212.apod.ui.preferences.PreferencesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.preferences.PreferencesFragment">

        <TextView
            android:id="@+id/text_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:text="@string/preferences"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/app_theme"
            android:textSize="24sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_round_chevron_right_24"
            app:layout_constraintTop_toBottomOf="@id/text_preferences" />

        <TextView
            android:id="@+id/app_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:text="@string/app_language"
            android:textSize="24sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_round_chevron_right_24"
            app:layout_constraintTop_toBottomOf="@id/app_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notification_pref"
            android:padding="12dp"
            android:background="?android:selectableItemBackground"
            android:text="@string/notifications"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/app_language" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>