<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/app_theme"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/divider_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_options" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_bottom_sheet">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/system_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/system_default"
            android:textSize="20sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/light"
            android:textSize="20sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/dark"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/divider_bottom_sheet_2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

    <TextView
        android:id="@+id/close_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:padding="6dp"
        android:text="@string/close"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_bottom_sheet_2" />

</androidx.constraintlayout.widget.ConstraintLayout>