<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/image_item_apod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/main_image"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_title_home_fragment"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingTop="44dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/title_item_apod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="Yogi And Friends In 3D" />

            <TextView
                android:id="@+id/description_item_apod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:textColor="#B3FFFFFF"
                tools:text="@string/dummy_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/copyright_item_apod"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:drawablePadding="4dp"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:gravity="center|start"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_round_copyright_24"
                    app:drawableTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/fav_button_item_apod_gallery"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="IMP Team" />

                <ImageButton
                    android:id="@+id/fav_button_item_apod_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/like_button"
                    android:padding="6dp"
                    android:src="@drawable/ic_round_favorite_border_24"
                    android:tint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>